Refine scalar subquery resource cleanup
Misc adds void free overloads for callers that already hold a primary
failure. Cleanup paths attach close failures as suppressed exceptions
without discarding accumulator return values. MiscTest covers null
inputs, checked and unchecked failures, continuation, slot clearing,
and self-suppression.

SqlCodeGenerator tracks temporary join factory ownership explicitly
and removes redundant local resets. Scalar subquery helpers use Java
17 switch expressions, while test functions align worker cloning and
thread IDs with current APIs.